fix(docs): deleted create multiple question answers handler from admin route
